@@ -5,9 +5,3 @@ CIAO::RTResource_Config_Manager::RTResource_Config_Manager ()
 {
 }
 
-ACE_INLINE
-CIAO::RTResource_Config_Manager::~RTResource_Config_Manager ()
-{
-  this->fini ();
-}
-
