@@ -1,3 +1,9 @@
+Fri Mar  9 14:09:19 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * DAnCE/NodeApplication/RTConfig_Manager.{cpp,inl}:
+          Fixed ownership problems with the policy list, fixes bugzilla 2743.
+          Also moved destructor to cpp file
+
 Thu Mar  8 01:27:19 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>
 
         * docs/tutorials/Quoter/Simple/01.html:
